--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@
     font-family: var(--ff-inter);
 }
 body{
-    background: url(../images/bottom-bg.jpg) center no-repeat;
+    background: url(../images/bottom-bg.png) center no-repeat;
     background-size: cover;
 }
 ul{
@@ -178,7 +178,7 @@ nav{
     margin-bottom: 30px;
 }
 .blog-gallery div{
-    background: url(../images/blog-img-1.jpg) center no-repeat;
+    background: url(../images/blog-img-1.png) center no-repeat;
     background-size: cover;
 }
 
@@ -459,7 +459,7 @@ footer .icons img{
 
 
     .blog-gallery div{
-        background: url(../images/blog-img-1.jpg) center no-repeat;
+        background: url(../images/blog-img-1.png) center no-repeat;
         background-size: cover;
         border-radius: 20px;
         grid-row: 1/3;
