--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -473,7 +473,7 @@ footer .icons img{
     }
 
     footer{
-        padding: 40px 20px;
+        padding: 40px 20px 10px;
         text-align: left;
     }
     .footer-links{
@@ -502,7 +502,7 @@ footer .icons img{
         margin: 30px 0 0;
     }
     .icons_copyright{
-        padding: 30px 0;
+        padding: 20px 0;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
