--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@
     font-family: var(--ff-inter);
 }
 body{
-    background: url(../images/bottom-bg.png) center no-repeat;
+    background: url(../images/bottom-bg.jpg) center no-repeat;
     background-size: cover;
 }
 ul{
@@ -202,6 +202,11 @@ nav{
 .input_btn button{
     margin-top: 10px;
     border: 2px solid var(--white);
+}
+.input_btn button:hover{
+    background: var(--white);
+    color: var(--desaturated-green);
+    border: 1px solid var(--desaturated-green);
 }
 input{
     border: none;
@@ -570,5 +575,59 @@ footer .icons img{
     .model-gallery img:nth-child(6){
         grid-row: 5/6;
         grid-column: 2/3;
+    }
+}
+
+
+/* JS Animation */
+.scroll {
+    opacity: 0;
+}
+  
+.scroll.scrolled {
+    opacity: 1;
+}
+.scrolled.fade-top{
+    animation: fade-top .5s;
+}
+.scrolled.fade-left{
+    animation: fade-left .5s;
+}
+.scrolled.fade-right{
+    animation: fade-right .5s;
+}
+
+
+
+@keyframes fade-top {
+    from{
+        transform: translateY(-50px);
+        opacity: 0;
+    }
+    to{
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+@keyframes fade-left {
+    from{
+        transform: translateX(100px);
+        opacity: 0;
+    }
+    to{
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes fade-right {
+    from{
+        transform: translateX(-100px);
+        opacity: 0;
+    }
+    to{
+        transform: translateX(0);
+        opacity: 1;
     }
 }
